--- a/frontend/test-components/profile.scss
+++ b/frontend/test-components/profile.scss
@@ -236,5 +236,5 @@ body {
     }
 
     .profile-container {
-        animation: rotateIn 1s ease-in-out;
+        animation: rotateIn 1s ease-in-out, fadeIn 1.2s ease-in-out;
     }
